# AP1.Maze-Solver-using-BFS-DFS-A-

./: AStar.h  BestFirstSearch.h  BreadthFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DepthFirstSearch.h  FileCacheManager.h  Matrix.h  MatrixClientHandler.cpp  MatrixClientHandler.h  MatrixSolver.cpp  MatrixSolver.h  ParallelServer.cpp  ParallelServer.h  Point.cpp  Point.h  Searchable.h  Searcher.h  Server.h  ServerCommunication.cpp  ServerCommunication.h  Solver.h  SolverSearcher.h  State.h  main.cpp  הבהרות
